<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.andresarango.finalexam.LoginActivity">

    <Button
        android:id="@+id/login_button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button_text"
        android:layout_centerInParent="true"/>

    <EditText
        android:id="@+id/login_edit_text_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/login_edit_text_password"
        android:hint="@string/login_edit_text_username_hint"/>
    <EditText
        android:id="@+id/login_edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textVisiblePassword"
        android:layout_above="@id/login_button_submit"
        android:layout_centerHorizontal="true"
        android:hint="@string/login_edit_text_password_hint"/>
</RelativeLayout>
