<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.andresarango.finalexam.ProfileActivity">

    <include
        android:id="@+id/imagview_user"
        layout="@layout/profile_imageview_user"
        android:layout_width="@dimen/profile_image_height_and_width"
        android:layout_height="@dimen/profile_image_height_and_width"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/profile_imageview_user_margin_bottom" />

    <RelativeLayout
        android:id="@+id/buttons_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imagview_user"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:id="@+id/heart_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/button_heart"
                layout="@layout/profile_button_heart"
                android:layout_width="@dimen/profile_button_height_and_width"
                android:layout_height="@dimen/profile_button_height_and_width"
                android:layout_margin="@dimen/profile_button_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_heart"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/profile_button_margin"
                android:text="@string/button_heart_textview" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/message_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/heart_layout">

            <include
                android:id="@+id/button_message"
                layout="@layout/profile_button_message"
                android:layout_width="@dimen/profile_button_height_and_width"
                android:layout_height="@dimen/profile_button_height_and_width"
                android:layout_margin="@dimen/profile_button_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_message"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/profile_button_margin"

                android:text="@string/button_message_textview" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/settings_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/message_layout">

            <include
                android:id="@+id/button_settings"
                layout="@layout/profile_button_settings"
                android:layout_width="@dimen/profile_button_height_and_width"
                android:layout_height="@dimen/profile_button_height_and_width"
                android:layout_margin="@dimen/profile_button_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_settings"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/profile_button_margin"
                android:text="@string/button_settings_textview" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/logout_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/settings_layout">

            <include
                android:id="@+id/button_logout"
                layout="@layout/profile_button_logout"
                android:layout_width="@dimen/profile_button_height_and_width"
                android:layout_height="@dimen/profile_button_height_and_width"
                android:layout_margin="@dimen/profile_button_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_logout"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/profile_button_margin"
                android:text="@string/button_logout_textview" />
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
